[gd_scene load_steps=3 format=3 uid="uid://b0vkgsbe0x0nt"]

[ext_resource type="Script" uid="uid://c1rqva3qqrnp2" path="res://scripts/UI/StatsDisplay.gd" id="1_a0xtv"]

[sub_resource type="ViewportTexture" id="ViewportTexture_qyvag"]
viewport_path = NodePath("SubViewport")

[node name="StatsDisplay" type="Node3D" node_paths=PackedStringArray("stats_label")]
script = ExtResource("1_a0xtv")
stats_label = NodePath("SubViewport/Control/Label")
time_to_sum = 0.25
time_to_fade = 1

[node name="StatsSprite" type="Sprite3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0, 0)
billboard = 1
no_depth_test = true
fixed_size = true
render_priority = 127
texture = SubResource("ViewportTexture_qyvag")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Control" type="Control" parent="SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SubViewport/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -22.5
offset_right = 36.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "4853"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StayTimer" to="." method="_on_stay_timer_timeout"]
